# epigraphdb_web

./: .gitignore  .gitlab-ci-disabled.yml  .gitlab-ci.yml  .gitmodules  LICENSE.md  README.md  docker-compose-dev-local.yml  docker-compose-dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile-dev  Makefile  README.md  environment-base.yml  environment.yml  mypy.ini  pyproject.toml  tox.ini
backend/app/: env_configs.py  main.py  settings.py
backend/app/apis/: top.py
backend/app/apis/mr_simple/: __init__.py  functions.py
backend/app/apis/secondary_views/about/: __init__.py  functions.py  models.py  schema.py
backend/app/apis/secondary_views/entity/: __init__.py  entity_resource_mapping.py  entity_routes.py  linked_resources.py  meta_ent_funcs.py  meta_entity_routes.py  models.py  resources_extra.py  resources_routes.py  similarity_search.py  trait_id_translators.py  web_view_urls.py
backend/app/apis/secondary_views/explore/: __init__.py  models.py  neighbour_graph.py  node_match.py  path_match.py
backend/app/apis/secondary_views/gallery/: __init__.py  functions.py  graph.py  spec_cardiovascular_outcomes.py  spec_confounder_bmi_chd.py  spec_drugs_coronary_heart_disease.py  spec_efo_leukemia.py  spec_gwas_bmi_gwas.py  spec_pathway_crohns_disease.py  specs.py
backend/app/apis/secondary_views/nlp/: __init__.py  processing.py  types.py
backend/app/apis/secondary_views/ontology/: __init__.py  funcs.py
backend/app/apis/topic_views/confounder/: __init__.py  diagram.py  functions.py  graph.py
backend/app/apis/topic_views/covid_xqtl/: __init__.py  (+2 more)
backend/app/funcs/: annotate_entity.py  cache.py  curlify.py  cypher_diagram.py  network_graph.py  query_processors.py  render_query.py
backend/app/funcs/elasticsearch/: autocomplete.py  indexers.py  query.py
backend/app/models/: __init__.py  cypher_diagram_models.py  entities.py  meta_graph.py  network_graph_models.py
backend/app/utils/: __init__.py  data_table.py  database.py  datatable_config.py  logging.py  meta_graph.py  meta_node_config.py  meta_rel_config.py  queries.py  rpkg-funcs.yml  url_helpers.py  visjs_config.py
backend/notebooks/: .gitignore
backend/scripts/: check.py  check_epigraphdb_compose.py  overwrite_cache.py
backend/tests/api_response/: test_about_schema.py  test_components.py  test_entity_explore.py  test_responses.py
backend/tests/mr_simple/: test_responses.py
(+282 files in other folders)
