[tool.poetry]
name = "epigraphdb_web"
version = "0.3.0"
description = ""
authors = ["Yi Liu <yi6240.liu@bristol.ac.uk>", "Tom Gaunt <Tom.Gaunt@bristol.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54"
environs = "^6.1"
numpy = "^1.17"
requests = "^2.22"
pygments = "^2.4"
pytest = "^5.3"
aiofiles = "^0.4.0"
uvicorn = "^0.10.8"
pymongo = "^3.10.0"
elasticsearch = "^7.1.0"
elasticsearch-dsl = "^7.1.0"
pytest-xdist = "^1.31.0"
loguru = "^0.4"
pandas = "^1.0"
pydantic = "^1.5"
colorama = "^0.4.3"
anonymizeip = "^1.0.0"
pyyaml = "^5.3.1"
Markdown = "^3.2.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mypy = {version = "^0.740.0", allow-prereleases = true}
jedi = {version = "^0.15.1", allow-prereleases = true}
isort = {version = "^4.3", allow-prereleases = true}
autoflake = {version = "^1.3", allow-prereleases = true}
flake8 = {version = "^3.7.9", allow-prereleases = true}
ipython = "^7.11.1"
jupyterlab = "^3.0.9"
nb-black = "^1.0.7"

[tool.black]
line-length = 79
exclude = '''

(
  /(
    | env
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
